Updated time and current temperature

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,9 @@ li:first-letter {
   text-transform: capitalize;
 }
 
+#source-code {
+  text-decoration: none;
+}
 .overview {
   margin-bottom: 15px;
 }
